--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - POD fixes.
+
 0.05      2012-04-26 08:03:10 Europe/Berlin
 
   - Allow any number of value columns in MySQL storage backend.
