--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - Ooops, lose the Redis cfg that will make tests fail.
+
 0.07      2012-04-26 16:07:08 Europe/Berlin
 
   - POD fixes.
