--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - MySQL storage order of initialization bug fix.
+  - Ketama continuum: guard against bad specs
+
 0.11      2012-05-11 11:20:36 Europe/Berlin
 
   - Minor MySQL storage fixup
