--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for Perl extension Foo.
 
   - MySQL storage order of initialization bug fix.
   - Ketama continuum: guard against bad specs
+  - Introducing the HasLogger role, adding logging
+    to various bits of code.
 
 0.11      2012-05-11 11:20:36 Europe/Berlin
 
