MySQL storage: auto_increment PK
By default, the MySQL storage backend will use a separate auto_increment
primary key now, which should improve insert performance over using the
actual string key.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Foo.
 {{$NEXT}}
 
   - MySQL storage order of initialization bug fix.
+  - MySQL storage support for auto_increment PK
   - Ketama continuum: guard against bad specs
   - Introducing the HasLogger role, adding logging
     to various bits of code.
