--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Foo.
 
 {{$NEXT}}
 
+  - Require Algorithm::ConsistentHash::Ketama 0.00008
+
 0.12      2012-05-18 10:24:36 Europe/Berlin
 
   - MySQL storage order of initialization bug fix.
