Reconnect to MySQL on "Lost connection to MySQL server during query"
This change adds detection for another recoverable MySQL error, see
ffb4d57 and 8e60c92 in the work code. I have a local monkeypatch for
ShardedKV::Storage::MySQL::_run_sql added in the latter that I can
remove when I release this.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for ShardedKV: {{ $dist->version }}
 
 {{$NEXT}}
 
+  - In addition to reconnecting if we get a MySQL error matching
+    "MySQL server has gone away" we now also reconnect if the error
+    matches "Lost connection to MySQL server during query".
+
 0.19      2014-03-19 11:46:23UTC+0000 UTC
 
   - This module is *no longer* considered experimental. It's been used
